[tool.poetry]
name = "octobotv4"
version = "4.0.0"
description = ""
authors = ["Octo <me@octonezd.me>"]
license = "MIT"
classifiers = ["Private :: Do Not Upload"]
[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "~=13.14"
toml = "^0.10.2"
redis = "~=4.5.4"
Babel = "~=2.12.1"
jstyleson = "~=0.0.2"
pytz = "~=2022.2"
beautifulsoup4 = "~=4.11.1"
requests = "~=2.28.1"
googletrans = "4.0.0rc1"
Pillow = "~=9.4.0"
pygenstub = "~=2.0.1"
emoji-country-flag = "~=1.3.1"
spamwatch = "~=0.3.0"
cachetools = "4.2.2"
sentry-sdk = "~=1.26.0"
pygelf = "~=0.4.0"
bleach = "~=5.0.1"
fakeredis = "~=2.10.2"
pyre2 = {version="^0.3.6", optional=true}

[tool.poetry.extras]
pyre2 = ["pyre2"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
Sphinx = "^5.2.3"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
